Carousel overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -850,7 +850,10 @@ button[type="submit"]:hover,
 
 .carousel-result-content h5 {
   display: -webkit-box;
-  -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
+
+  -webkit-line-clamp: 2;
+  line-clamp: 2;
+
   overflow: hidden;
 }
